[gd_scene load_steps=17 format=3 uid="uid://m8wobe7jyib"]

[ext_resource type="Script" path="res://scripts/world.gd" id="1_ril8e"]
[ext_resource type="Script" path="res://scripts/game_manager.gd" id="2_y0ylj"]
[ext_resource type="Texture2D" uid="uid://oy1ai5sji743" path="res://assets/tile_types.png" id="3_7hh7t"]
[ext_resource type="PackedScene" uid="uid://0sgl0bmbyric" path="res://scenes/player.tscn" id="3_dwyp4"]
[ext_resource type="Script" path="res://scripts/tile_map.gd" id="4_d0jlv"]
[ext_resource type="Resource" uid="uid://drm55sraatx1e" path="res://resources/inventory/inventory_player.tres" id="4_r40io"]
[ext_resource type="Script" path="res://scripts/UI.gd" id="5_ptpun"]
[ext_resource type="PackedScene" uid="uid://bgmj7j4h71jkr" path="res://scenes/border.tscn" id="5_xrddu"]
[ext_resource type="PackedScene" uid="uid://dbmwlvnfb4buu" path="res://scenes/inventory.tscn" id="7_6sxd0"]
[ext_resource type="Texture2D" uid="uid://ctbdv4l5mr25x" path="res://assets/tileset-forest.png" id="7_7024j"]
[ext_resource type="Texture2D" uid="uid://b7b48q821e5dt" path="res://assets/tileset-grass.png" id="8_5ss2s"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_lwnm5"]
blend_mode = 1
light_mode = 2

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_psncx"]
texture = ExtResource("7_7024j")
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 7
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/terrains_peering_bit/bottom_left_corner = 7
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 7
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/terrains_peering_bit/bottom_right_corner = 7
1:0/0/terrains_peering_bit/top_right_corner = 7
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 7
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/terrains_peering_bit/bottom_right_corner = 7
2:0/0/terrains_peering_bit/bottom_left_corner = 7
2:0/0/terrains_peering_bit/top_left_corner = 7
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 7
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/terrains_peering_bit/bottom_right_corner = 7
3:0/0/terrains_peering_bit/bottom_left_corner = 7
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 7
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/terrains_peering_bit/bottom_right_corner = 7
0:1/0/terrains_peering_bit/top_left_corner = 7
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 7
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/terrains_peering_bit/bottom_right_corner = 7
1:1/0/terrains_peering_bit/bottom_left_corner = 7
1:1/0/terrains_peering_bit/top_right_corner = 7
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 7
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/terrains_peering_bit/bottom_right_corner = 7
2:1/0/terrains_peering_bit/bottom_left_corner = 7
2:1/0/terrains_peering_bit/top_left_corner = 7
2:1/0/terrains_peering_bit/top_right_corner = 7
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 7
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/terrains_peering_bit/bottom_left_corner = 7
3:1/0/terrains_peering_bit/top_left_corner = 7
3:1/0/terrains_peering_bit/top_right_corner = 7
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 7
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/terrains_peering_bit/top_right_corner = 7
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 7
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/terrains_peering_bit/top_left_corner = 7
1:2/0/terrains_peering_bit/top_right_corner = 7
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 7
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/terrains_peering_bit/bottom_right_corner = 7
2:2/0/terrains_peering_bit/top_left_corner = 7
2:2/0/terrains_peering_bit/top_right_corner = 7
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 7
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/terrains_peering_bit/bottom_left_corner = 7
3:2/0/terrains_peering_bit/top_left_corner = 7
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 7
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/terrains_peering_bit/bottom_right_corner = 7
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 7
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/terrains_peering_bit/bottom_left_corner = 7
2:3/0/terrains_peering_bit/top_right_corner = 7
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 7
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0/terrains_peering_bit/top_left_corner = 7

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_brs63"]
texture = ExtResource("8_5ss2s")
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 6
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/terrains_peering_bit/bottom_left_corner = 6
0:0/0/metadata/_better_terrain = {
4: [0],
7: [0],
8: [0],
"type": 0
}
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 6
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/terrains_peering_bit/bottom_right_corner = 6
1:0/0/terrains_peering_bit/top_right_corner = 6
1:0/0/metadata/_better_terrain = {
0: [0],
3: [0],
4: [0],
12: [0],
15: [0],
"type": 0
}
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 6
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/terrains_peering_bit/bottom_right_corner = 6
2:0/0/terrains_peering_bit/bottom_left_corner = 6
2:0/0/terrains_peering_bit/top_left_corner = 6
2:0/0/metadata/_better_terrain = {
0: [0],
3: [0],
4: [0],
7: [0],
8: [0],
11: [0],
12: [0],
"type": 0
}
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 6
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/terrains_peering_bit/bottom_right_corner = 6
3:0/0/terrains_peering_bit/bottom_left_corner = 6
3:0/0/metadata/_better_terrain = {
0: [0],
3: [0],
4: [0],
7: [0],
8: [0],
"type": 0
}
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 6
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/terrains_peering_bit/bottom_right_corner = 6
0:1/0/terrains_peering_bit/top_left_corner = 6
0:1/0/metadata/_better_terrain = {
0: [0],
3: [0],
4: [0],
8: [0],
11: [0],
12: [0],
"type": 0
}
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 6
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/terrains_peering_bit/bottom_right_corner = 6
1:1/0/terrains_peering_bit/bottom_left_corner = 6
1:1/0/terrains_peering_bit/top_right_corner = 6
1:1/0/metadata/_better_terrain = {
0: [0],
3: [0],
4: [0],
7: [0],
8: [0],
12: [0],
15: [0],
"type": 0
}
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 6
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/terrains_peering_bit/bottom_right_corner = 6
2:1/0/terrains_peering_bit/bottom_left_corner = 6
2:1/0/terrains_peering_bit/top_left_corner = 6
2:1/0/terrains_peering_bit/top_right_corner = 6
2:1/0/metadata/_better_terrain = {
0: [0],
3: [0],
4: [0],
7: [0],
8: [0],
11: [0],
12: [0],
15: [0],
"type": 0
}
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 6
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/terrains_peering_bit/bottom_left_corner = 6
3:1/0/terrains_peering_bit/top_left_corner = 6
3:1/0/terrains_peering_bit/top_right_corner = 6
3:1/0/metadata/_better_terrain = {
0: [0],
4: [0],
7: [0],
8: [0],
11: [0],
12: [0],
15: [0],
"type": 0
}
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 6
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/terrains_peering_bit/top_right_corner = 6
0:2/0/metadata/_better_terrain = {
0: [0],
12: [0],
15: [0],
"type": 0
}
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 6
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/terrains_peering_bit/top_left_corner = 6
1:2/0/terrains_peering_bit/top_right_corner = 6
1:2/0/metadata/_better_terrain = {
0: [0],
8: [0],
11: [0],
12: [0],
15: [0],
"type": 0
}
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 6
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/terrains_peering_bit/bottom_right_corner = 6
2:2/0/terrains_peering_bit/top_left_corner = 6
2:2/0/terrains_peering_bit/top_right_corner = 6
2:2/0/metadata/_better_terrain = {
0: [0],
3: [0],
4: [0],
8: [0],
11: [0],
12: [0],
15: [0],
"type": 0
}
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 6
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/terrains_peering_bit/bottom_left_corner = 6
3:2/0/terrains_peering_bit/top_left_corner = 6
3:2/0/metadata/_better_terrain = {
4: [0],
7: [0],
8: [0],
11: [0],
12: [0],
"type": 0
}
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 6
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/terrains_peering_bit/bottom_right_corner = 6
1:3/0/metadata/_better_terrain = {
0: [0],
3: [0],
4: [0],
"type": 0
}
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 6
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/terrains_peering_bit/bottom_left_corner = 6
2:3/0/terrains_peering_bit/top_right_corner = 6
2:3/0/metadata/_better_terrain = {
0: [0],
4: [0],
7: [0],
8: [0],
12: [0],
15: [0],
"type": 0
}
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 6
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0/terrains_peering_bit/top_left_corner = 6
3:3/0/metadata/_better_terrain = {
8: [0],
11: [0],
12: [0],
"type": 0
}

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8i1sl"]
texture = ExtResource("3_7hh7t")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
7:4/0 = 0
7:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:4/0/physics_layer_0/angular_velocity = 0.0
8:4/0 = 0
8:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:4/0/physics_layer_0/angular_velocity = 0.0
0:5/0 = 0
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
0:6/0 = 0
0:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:6/0/physics_layer_0/angular_velocity = 0.0
1:6/0 = 0
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
2:6/0 = 0
2:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:6/0/physics_layer_0/angular_velocity = 0.0
3:6/0 = 0
3:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:6/0/physics_layer_0/angular_velocity = 0.0
4:6/0 = 0
4:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_0/angular_velocity = 0.0
5:6/0 = 0
5:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:6/0/physics_layer_0/angular_velocity = 0.0
6:6/0 = 0
6:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:6/0/physics_layer_0/angular_velocity = 0.0
7:6/0 = 0
7:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:6/0/physics_layer_0/angular_velocity = 0.0
8:6/0 = 0
8:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:6/0/physics_layer_0/angular_velocity = 0.0
9:6/0 = 0
9:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:6/0/physics_layer_0/angular_velocity = 0.0
0:7/0 = 0
0:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:7/0/physics_layer_0/angular_velocity = 0.0
1:7/0 = 0
1:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:7/0/physics_layer_0/angular_velocity = 0.0
2:7/0 = 0
2:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:7/0/physics_layer_0/angular_velocity = 0.0
3:7/0 = 0
3:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:7/0/physics_layer_0/angular_velocity = 0.0
4:7/0 = 0
4:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:7/0/physics_layer_0/angular_velocity = 0.0
5:7/0 = 0
5:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:7/0/physics_layer_0/angular_velocity = 0.0
6:7/0 = 0
6:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:7/0/physics_layer_0/angular_velocity = 0.0
7:7/0 = 0
7:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:7/0/physics_layer_0/angular_velocity = 0.0
8:7/0 = 0
8:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:7/0/physics_layer_0/angular_velocity = 0.0
9:7/0 = 0
9:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:7/0/physics_layer_0/angular_velocity = 0.0
0:8/0 = 0
0:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:8/0/physics_layer_0/angular_velocity = 0.0
1:8/0 = 0
1:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:8/0/physics_layer_0/angular_velocity = 0.0
2:8/0 = 0
2:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:8/0/physics_layer_0/angular_velocity = 0.0
3:8/0 = 0
3:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:8/0/physics_layer_0/angular_velocity = 0.0
4:8/0 = 0
4:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:8/0/physics_layer_0/angular_velocity = 0.0
5:8/0 = 0
5:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:8/0/physics_layer_0/angular_velocity = 0.0
6:8/0 = 0
6:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:8/0/physics_layer_0/angular_velocity = 0.0
7:8/0 = 0
7:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:8/0/physics_layer_0/angular_velocity = 0.0
8:8/0 = 0
8:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:8/0/physics_layer_0/angular_velocity = 0.0
0:9/0 = 0
0:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:9/0/physics_layer_0/angular_velocity = 0.0
0:10/0 = 0
0:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:10/0/physics_layer_0/angular_velocity = 0.0
0:11/0 = 0
0:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:11/0/physics_layer_0/angular_velocity = 0.0
1:11/0 = 0
1:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:11/0/physics_layer_0/angular_velocity = 0.0
2:11/0 = 0
2:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:11/0/physics_layer_0/angular_velocity = 0.0
3:11/0 = 0
3:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:11/0/physics_layer_0/angular_velocity = 0.0
4:11/0 = 0
4:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:11/0/physics_layer_0/angular_velocity = 0.0
5:11/0 = 0
5:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:11/0/physics_layer_0/angular_velocity = 0.0
6:11/0 = 0
6:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:11/0/physics_layer_0/angular_velocity = 0.0
7:11/0 = 0
7:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:11/0/physics_layer_0/angular_velocity = 0.0
8:11/0 = 0
8:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:11/0/physics_layer_0/angular_velocity = 0.0
9:11/0 = 0
9:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:11/0/physics_layer_0/angular_velocity = 0.0
0:12/0 = 0
0:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:12/0/physics_layer_0/angular_velocity = 0.0
1:12/0 = 0
1:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:12/0/physics_layer_0/angular_velocity = 0.0
2:12/0 = 0
2:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:12/0/physics_layer_0/angular_velocity = 0.0
3:12/0 = 0
3:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:12/0/physics_layer_0/angular_velocity = 0.0
4:12/0 = 0
4:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:12/0/physics_layer_0/angular_velocity = 0.0
5:12/0 = 0
5:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:12/0/physics_layer_0/angular_velocity = 0.0
6:12/0 = 0
6:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:12/0/physics_layer_0/angular_velocity = 0.0
7:12/0 = 0
7:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:12/0/physics_layer_0/angular_velocity = 0.0
8:12/0 = 0
8:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:12/0/physics_layer_0/angular_velocity = 0.0
9:12/0 = 0
9:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:12/0/physics_layer_0/angular_velocity = 0.0
0:13/0 = 0
0:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:13/0/physics_layer_0/angular_velocity = 0.0
1:13/0 = 0
1:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:13/0/physics_layer_0/angular_velocity = 0.0
2:13/0 = 0
2:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:13/0/physics_layer_0/angular_velocity = 0.0
3:13/0 = 0
3:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:13/0/physics_layer_0/angular_velocity = 0.0
4:13/0 = 0
4:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:13/0/physics_layer_0/angular_velocity = 0.0
5:13/0 = 0
5:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:13/0/physics_layer_0/angular_velocity = 0.0
6:13/0 = 0
6:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:13/0/physics_layer_0/angular_velocity = 0.0
7:13/0 = 0
7:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:13/0/physics_layer_0/angular_velocity = 0.0
8:13/0 = 0
8:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:13/0/physics_layer_0/angular_velocity = 0.0
9:13/0 = 0
9:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:13/0/physics_layer_0/angular_velocity = 0.0
0:14/0 = 0
0:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:14/0/physics_layer_0/angular_velocity = 0.0
1:14/0 = 0
1:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:14/0/physics_layer_0/angular_velocity = 0.0
2:14/0 = 0
2:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:14/0/physics_layer_0/angular_velocity = 0.0
3:14/0 = 0
3:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:14/0/physics_layer_0/angular_velocity = 0.0
4:14/0 = 0
4:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:14/0/physics_layer_0/angular_velocity = 0.0
5:14/0 = 0
5:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:14/0/physics_layer_0/angular_velocity = 0.0
6:14/0 = 0
6:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:14/0/physics_layer_0/angular_velocity = 0.0
7:14/0 = 0
7:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:14/0/physics_layer_0/angular_velocity = 0.0
8:14/0 = 0
8:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:14/0/physics_layer_0/angular_velocity = 0.0
9:14/0 = 0
9:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:14/0/physics_layer_0/angular_velocity = 0.0
0:15/0 = 0
0:15/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:15/0/physics_layer_0/angular_velocity = 0.0
1:15/0 = 0
1:15/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:15/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_sp5nh"]
uv_clipping = true
occlusion_layer_0/light_mask = 1
physics_layer_0/collision_layer = 1
terrain_set_0/mode = 1
terrain_set_0/terrain_0/name = "Sea"
terrain_set_0/terrain_0/color = Color(0, 0.6, 0.858824, 1)
terrain_set_0/terrain_1/name = "Water"
terrain_set_0/terrain_1/color = Color(0.192157, 0.862745, 0.905882, 1)
terrain_set_0/terrain_2/name = "Beach"
terrain_set_0/terrain_2/color = Color(0.890196, 0.835294, 0.447059, 1)
terrain_set_0/terrain_3/name = "Sand"
terrain_set_0/terrain_3/color = Color(0.894118, 0.764706, 0.447059, 1)
terrain_set_0/terrain_4/name = "Ground"
terrain_set_0/terrain_4/color = Color(0.894118, 0.65098, 0.447059, 1)
terrain_set_0/terrain_5/name = "Dirt"
terrain_set_0/terrain_5/color = Color(0.760784, 0.521569, 0.411765, 1)
terrain_set_0/terrain_6/name = "Grass"
terrain_set_0/terrain_6/color = Color(0.388235, 0.780392, 0.301961, 1)
terrain_set_0/terrain_7/name = "Forest"
terrain_set_0/terrain_7/color = Color(0.317647, 0.67451, 0.411765, 1)
terrain_set_0/terrain_8/name = "Floor"
terrain_set_0/terrain_8/color = Color(0.772549, 0.537255, 0.388235, 1)
terrain_set_0/terrain_9/name = "Rock"
terrain_set_0/terrain_9/color = Color(0.454902, 0.513726, 0.619608, 1)
terrain_set_0/terrain_10/name = "Stone"
terrain_set_0/terrain_10/color = Color(0.337255, 0.380392, 0.498039, 1)
sources/2 = SubResource("TileSetAtlasSource_brs63")
sources/1 = SubResource("TileSetAtlasSource_psncx")
sources/3 = SubResource("TileSetAtlasSource_8i1sl")
metadata/_better_terrain = {
"decoration": ["Decoration", Color(0.411765, 0.411765, 0.411765, 1), 3, [], {
"path": "res://addons/better-terrain/icons/Decoration.svg"
}],
"terrains": [["Grass", Color(0.232037, 0.903887, 0.68359, 1), 0, [], {
"coord": Vector2i(1, 2),
"source_id": 2
}]],
"version": "0.2"
}

[node name="World" type="Node2D"]
script = ExtResource("1_ril8e")

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_y0ylj")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -1)
anchor_mode = 0
zoom = Vector2(4, 4)

[node name="Player" parent="Camera2D" node_paths=PackedStringArray("tile_map") instance=ExtResource("3_dwyp4")]
tile_map = NodePath("../../TileMap")
inventory = ExtResource("4_r40io")

[node name="CanvasModulate" type="CanvasModulate" parent="Camera2D"]
position = Vector2(-2.08165e-12, 2)
color = Color(0.0980392, 0, 0.341176, 1)

[node name="UI" type="CanvasLayer" parent="."]
scale = Vector2(4, 4)
transform = Transform2D(4, 0, 0, 4, 0, 0)
script = ExtResource("5_ptpun")

[node name="Inventory" parent="UI" instance=ExtResource("7_6sxd0")]
offset_left = 87.0
offset_top = 144.0
offset_right = 87.0
offset_bottom = 144.0

[node name="HashLabel" type="Label" parent="UI"]
offset_left = 225.0
offset_top = 138.0
offset_right = 280.0
offset_bottom = 152.0
theme_override_font_sizes/font_size = 10
horizontal_alignment = 2

[node name="IsLoadingLabel" type="Label" parent="UI"]
offset_left = 126.0
offset_top = 71.0
offset_right = 170.0
offset_bottom = 85.0
theme_override_font_sizes/font_size = 10
text = "loading..."

[node name="TileMap" type="TileMap" parent="."]
z_index = -1
material = SubResource("CanvasItemMaterial_lwnm5")
use_parent_material = true
tile_set = SubResource("TileSet_sp5nh")
format = 2
layer_0/name = "0"
layer_1/name = "1"
layer_1/tile_data = PackedInt32Array()
layer_2/name = "2"
layer_2/tile_data = PackedInt32Array()
layer_3/tile_data = PackedInt32Array()
layer_4/tile_data = PackedInt32Array()
layer_5/tile_data = PackedInt32Array()
layer_6/tile_data = PackedInt32Array()
layer_7/tile_data = PackedInt32Array()
layer_8/tile_data = PackedInt32Array()
layer_9/tile_data = PackedInt32Array()
script = ExtResource("4_d0jlv")

[node name="BorderNorth" parent="TileMap" node_paths=PackedStringArray("tile_map", "player") instance=ExtResource("5_xrddu")]
position = Vector2(145, -8)
rotation = 3.14159
tile_map = NodePath("..")
player = NodePath("../../Camera2D/Player")

[node name="BorderSouth" parent="TileMap" node_paths=PackedStringArray("tile_map", "player") instance=ExtResource("5_xrddu")]
position = Vector2(145, 168)
tile_map = NodePath("..")
player = NodePath("../../Camera2D/Player")

[node name="BorderWest" parent="TileMap" node_paths=PackedStringArray("tile_map", "player") instance=ExtResource("5_xrddu")]
position = Vector2(-8, 80)
rotation = 1.5708
tile_map = NodePath("..")
player = NodePath("../../Camera2D/Player")

[node name="BorderEast" parent="TileMap" node_paths=PackedStringArray("tile_map", "player") instance=ExtResource("5_xrddu")]
position = Vector2(296, 80)
rotation = -1.5708
tile_map = NodePath("..")
player = NodePath("../../Camera2D/Player")
